--- a/browser/package.json
+++ b/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ironplans/api",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "OpenAPI 3 browser client for IronPlans API",
   "files": [
     "dist/**",
@@ -9,13 +9,13 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean" : "run-p clean:* ",
+    "clean": "run-p clean:* ",
     "clean:dist": "rimraf dist",
     "clean:gen": "rimraf src/{apis,models}",
     "generate": "./scripts/generate.sh",
     "build": "./scripts/build.js",
     "types": "tsc -v -p tsconfig.build.json",
-    "release": "npm-run-all clean generate --parallel build types"
+    "release": "npm-run-all clean generate --parallel build types --serial ./scripts/release.sh"
   },
   "repository": {
     "type": "git",
