--- a/browser/package.json
+++ b/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ironplans/api",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "OpenAPI 3 browser client for IronPlans API",
   "files": [
     "dist/**",
@@ -15,7 +15,8 @@
     "generate": "./scripts/generate.sh",
     "build": "./scripts/build.js",
     "types": "tsc -v -p tsconfig.build.json",
-    "release": "npm-run-all clean generate --parallel build types --serial ./scripts/release.sh"
+    "prepublish": "npm-run-all clean generate --parallel build types --serial release",
+    "release": "./scripts/release.sh"
   },
   "repository": {
     "type": "git",
