--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,14 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v1
 
-    - name: Setup
+    - name: Setup git
       run: |
         git config --global user.email "bot@ironplans.com"
         git config --global user.name "Iron Robot"
+        
+    - name: Setup project
+      working-directory: ./browser
+      run: |
         yarn install --frozen-lockfile
     
     - name: Release
