--- a/browser/package.json
+++ b/browser/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/ironplans/openapi-clients#readme",
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.4.1",
     "esbuild": "^0.12.25",
     "npm-run-all": "^4.1.5",
     "tsc": "^2.0.3",
