--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ jobs:
 
     - name: Use Node.js
       uses: actions/setup-node@v1
+      with:
+        node-version: v16
+        cache: yarn
 
     - name: Setup git
       run: |
