--- a/browser/package.json
+++ b/browser/package.json
@@ -35,9 +35,8 @@
     "esbuild": "^0.12.25",
     "npm-run-all": "^4.1.5",
     "tsc": "^2.0.3",
-    "typescript": "^4.4.2"
-  },
-  "dependencies": {
+    "typescript": "^4.4.2",
     "rimraf": "^3.0.2"
-  }
+  },
+  "dependencies": {}
 }
