--- a/browser/package.json
+++ b/browser/package.json
@@ -1,42 +1,32 @@
 {
-  "name": "@ironplans/api",
+  "name": "@ironplans/browser",
+  "license": "MIT",
   "version": "0.0.25",
-  "description": "OpenAPI 3 browser client for IronPlans API",
-  "files": [
-    "dist/**",
-    "src/**"
-  ],
-  "types": "dist/index.d.ts",
-  "main": "dist/index.mjs",
+  "description": "OpenAPI client for @ironplans/browser",
+  "author": "OpenAPI-Generator",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
+  "files": ["dist", "src"],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "run-p clean:* ",
-    "clean:dist": "rimraf dist",
-    "clean:gen": "rimraf src/{apis,models}",
-    "generate": "./scripts/generate.sh",
-    "build": "run-p build:*",
-    "build:dist": "./scripts/build.js",
-    "build:types": "tsc -p tsconfig.build.json",
-    "release": "npm-run-all clean generate --parallel build:* --serial package",
-    "package": "./scripts/release.sh"
+    "generate": "../scripts/generate.sh -d ./src",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ironplans/openapi-clients.git"
-  },
-  "author": "team@ironplans.com",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ironplans/openapi-clients/issues"
-  },
-  "homepage": "https://github.com/ironplans/openapi-clients#readme",
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.4.1",
-    "esbuild": "^0.12.25",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "tsc": "^2.0.3",
-    "typescript": "^4.4.2"
+    "@size-limit/preset-small-lib": "^5.0.4",
+    "husky": "^7.0.2",
+    "size-limit": "^5.0.4",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.3.1",
+    "typescript": "^3.9.5"
+  },
+  "prettier": {
+    "semi": false,
+    "trailingComma": "all"
   },
   "dependencies": {}
 }
