--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ironplans/types",
   "typings": "types.ts",
-  "version": "0.0.1",
+  "version": "0.0.27-0",
   "files": ["types.ts"],
   "description": "Typescript types and interfaces for Iron Plans API",
   "repository": "https://github.com/ironplans/openapi-clients/types",
