--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ironplans/api",
   "license": "MIT",
-  "version": "0.0.27-0",
+  "version": "0.0.28-alpha.0",
   "description": "OpenAPI client for Iron Plans API",
   "author": "OpenAPI-Generator",
   "main": "./dist/index.js",
@@ -41,6 +41,5 @@
       "path": "dist/api.esm.js",
       "limit": "15 KB"
     }
-  ],
-  "dependencies": {}
+  ]
 }
